unirest rest client with crud commands